src/test/ui/issues/50000-59999/issue-54189.rs
fn bug() -> impl for <'r> Fn() -> &'r () { || { &() } }
//~^ ERROR binding for associated type `Output` references lifetime `'r`

fn main() {
    let f = bug();
}
